chore: spell check and add better wording

--- a/packages/@lightningjs/ui-components/src/components/FocusManager/FocusManager.mdx
+++ b/packages/@lightningjs/ui-components/src/components/FocusManager/FocusManager.mdx
@@ -151,7 +151,7 @@ Returns the transition value for the x coordinate of the FocusManager's items.
 
 Returns the transition value for the y coordinate of the FocusManager's items.
 
-#### \_render(): void
+#### _render(): void
 
 A no-op function that is called when `selectedIndex` is set. Can be overridden by classes that extend `FocusManager` for custom render behavior.
 
