--- a/packages/@lightningjs/ui-components/src/components/Row/Row.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Row/Row.mdx
@@ -89,7 +89,7 @@ The `Row` component will utilize the following properties on each individual ele
 
 ### Methods
 
-The Column component inherits few methods from its parent component, NavigationManager, which in turn extends the focusManager component. These shared methods are already documented in the focusManager component. For a detailed description of these methods, please refer to the methods section in the [FocusManager component](?path=/docs/navigation-focusmanager--focusmanager)
+The Row component inherits few methods from its parent component, NavigationManager, which in turn extends the focusManager component. These shared methods are already documented in the focusManager component. For a detailed description of these methods, please refer to the methods section in the [FocusManager component](?path=/docs/navigation-focusmanager--focusmanager)
 
 #### onScreenEffect(onScreenItems: lng.Component[]): void
 
