feature(Storybook): updates generate storybook link to take title from story file

--- a/packages/@lightningjs/ui-components/src/components/Shadow/Shadow.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Shadow/Shadow.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Tile } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as ShadowStories from './Shadow.stories';
 
 <Meta of={ShadowStories} />
