--- a/packages/@lightningjs/ui-components/src/components/ScrollWrapper/ScrollWrapper.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ScrollWrapper/ScrollWrapper.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Tile } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import { DocsLink } from '../../docs/utils';
 import * as ScrollWrapperStories from './ScrollWrapper.stories';
 
