--- a/packages/@lightningjs/ui-components/src/components/Slider/Slider.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Slider/Slider.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Tile } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as SliderStories from './Slider.stories';
 
 <Meta of={SliderStories} />
