--- a/packages/@lightningjs/ui-components/src/components/Surface/Surface.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Surface/Surface.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Tile } from '@storybook/blocks';
+﻿import { Meta, Title } from '@storybook/blocks';
 import * as SurfaceStories from './Surface.stories';
 
 <Meta of={SurfaceStories} />
