--- a/packages/@lightningjs/ui-components/src/components/Card/CardRadio.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/CardRadio.mdx
@@ -13,7 +13,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 SPDX-License-Identifier: Apache-2.0\*/}
 
-import { Canvas, Story } from '@storybook/addon-docs';
+import { Meta, Title } from '@storybook/blocks';
 import * as CardRadioStories from './CardRadio.stories';
 
 <Meta of={CardRadioStories} />
