--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -116,10 +116,13 @@ class Example extends lng.Component {
 | backgroundColor | string           | background style properties such as shader and color                 |
 | contentSpacing  | number           | padding to add between the icon and the text                         |
 | iconColor       | string           | color to be applied to the icon (only works with pure white PNGs)    |
+| offsetY         | number           | offset used to vertically center the text within the container       |
+| offsetX         | number           | offset used to horizontally center the text within the container     |
 | paddingX        | number           | padding to add on the left and right between the text and background |
 | paddingY        | number           | padding to add on the top and bottom between the text and background |
-| offsetY         | number           | offset used to ensure the text is positioned correctly.              |
 | radius          | number \| array  | shape of component                                                   |
+| strokeColor     | string           | color of the Badge border                                            |
+| strokeWidth     | number           | width of the Badge border                                            |
 | textStyle       | string \| object | text style to apply to the title                                     |
 
 ### Events
