fix: update component links in docs

--- a/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.stories.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.stories.mdx
@@ -37,7 +37,7 @@ Themes can have a `componentConfig` object that has nested component style objec
 
 ## In-line Component Style Overrides
 
-When utilizing components within your application, you can use [withThemeStyles](path=/docs/utilities-withthemestyles--with-theme-styles) to override particular style values in just that use case. Those custom styles are deep-merged with the resulting object from the previous steps.
+When utilizing components within your application, you can use [withThemeStyles](?path=/docs/utilities-withthemestyles--with-theme-styles) to override particular style values in just that use case. Those custom styles are deep-merged with the resulting object from the previous steps.
 
 ## Extensions
 
