--- a/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Tile/Tile.mdx
@@ -94,12 +94,12 @@ class Basic extends lng.Component {
 | ------------------ | ------- | -------- | ---------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | artwork            | object  | false    | undefined  | Object containing all properties supported in the [Artwork component](?path=/docs/components-artwork--artwork)                                                                                                                          |
 | badge              | object  | false    | undefined  | Object containing all properties supported in the [Badge component](?path=/docs/components-badge--text)                                                                                                                                 |
-| checkbox           | object  | false    | undefined  | Object containing all properties supported in the [Checkbox component](?path=/docs/utilities-checkbox--checkbox)                                                                                                                        |
+| checkbox           | object  | false    | undefined  | Object containing all properties supported in the [Checkbox component](?path=/docs/components-checkbox--checkbox)                                                                                                                       |
 | label              | object  | false    | undefined  | Object containing all properties supported in the [Label component](?path=/docs/components-label--label)                                                                                                                                |
 | metadata           | object  | false    | undefined  | Object containing all properties supported in the [MetadataTile component](?path=/docs/components-metadatatile--metadata-tile)<br /> Can use a different Metadata component by passing in a 'type' and then that component's properties |
 | metadataLocation   | string  | false    | 'standard' | Controls where there metadata is displayed in relation to the Tile. Available values are 'standard' and 'inset'                                                                                                                         |
 | persistentMetadata | boolean | false    | false      | Metadata will be shown at all times if set to true, otherwise it will only show when the Tile has focus                                                                                                                                 |
-| progressBar        | object  | false    | undefined  | Object containing all properties supported in the [ProgressBar component](??path=/docs/utilities-progressbar--progress-bar)                                                                                                             |
+| progressBar        | object  | false    | undefined  | Object containing all properties supported in the [ProgressBar component](?path=/docs/components-progressbar--progress-bar)                                                                                                             |
 
 ### Style Properties
 
