--- a/packages/@lightningjs/ui-components/src/components/Slider/Slider.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Slider/Slider.mdx
@@ -90,12 +90,13 @@ React to changes to the `Slider` value using the `onChange` signal.
 
 ### Properties
 
-| name  | type   | readonly | default    | description            |
-| ----- | ------ | -------- | ---------- | ---------------------- |
-| max   | number | false    | 100        | upper bound of `value` |
-| min   | number | false    | 0          | lower bound of `value` |
-| step  | number | false    | 1          | +/- value on change    |
-| value | number | false    | 0 or `min` | current value          |
+| name     | type    | readonly | default    | description                                                                                           |
+| -------- | ------- | -------- | ---------- | ----------------------------------------------------------------------------------------------------- |
+| max      | number  | false    | 100        | upper bound of `value`                                                                                |
+| min      | number  | false    | 0          | lower bound of `value`                                                                                |
+| step     | number  | false    | 1          | increment or decrement step for changing the value of the slider                                      |
+| value    | number  | false    | 0 or `min` | current value of slider                                                                               |
+| vertical | boolean | false    | 0 or `min` | If set to true, the slider will be displayed vertically otherwise, it will be displayed horizontally. |
 
 ### Style Properties
 
@@ -113,7 +114,6 @@ React to changes to the `Slider` value using the `onChange` signal.
 | progressStyle        | object  | style inherited from progressBar [See ProgressBar documentation](../ProgressBar/ProgressBar.mdx) |
 | showArrows           | boolean | if true, will display the left and right arrows on the slider                                    |
 | showKnob             | boolean | if true, will display the focused circle on the current value of the slider                      |
-| sliderHeight         | number  | height of the slider                                                                             |
 
 ### Signals
 
