--- a/packages/@lightningjs/ui-components/src/components/Gradient/Gradient.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Gradient/Gradient.mdx
@@ -57,6 +57,6 @@ class Example extends lng.Component {
 
 | name          | type   | description                             |
 | ------------- | ------ | --------------------------------------- |
-| gradientColor | number | default starting color for the gradient |
-| gradientTop   | number | default color the gradient fades to     |
+| gradientColor | number | default color the gradient fades to     |
+| gradientTop   | number | default starting color for the gradient |
 | radius        | number | default gradient corner radius          |
