docs(Card): add missing style features from docs to the style card in TS. Update string to string or object for description and title features

--- a/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
@@ -54,9 +54,9 @@ class Basic extends lng.Component {
 
 ### Properties
 
-| name  | type   | required | default   | description             |
-| ----- | ------ | -------- | --------- | ----------------------- |
-| title | string | false    | undefined | headline of the content |
+| name  | type             | required | default   | description             |
+| ----- | ---------------- | -------- | --------- | ----------------------- |
+| title | string \| object | false    | undefined | headline of the content |
 
 ### Style Properties
 
