--- a/packages/@lightningjs/ui-components/src/components/Card/CardTitle.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/CardTitle.mdx
@@ -57,10 +57,10 @@ class Basic extends lng.Component {
 
 ### Properties
 
-| name        | type   | required | default   | description |
-| ----------- | ------ | -------- | --------- | ----------- |
-| description | string | false    | undefined | description |
-| details     | string | false    | undefined | details     |
+| name        | type             | required | default   | description |
+| ----------- | ---------------- | -------- | --------- | ----------- |
+| description | string \| object | false    | undefined | description |
+| details     | string \| object | false    | undefined | details     |
 
 ### Style Properties
 
