--- a/packages/@lightningjs/ui-components/src/components/Artwork/Artwork.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Artwork/Artwork.mdx
@@ -66,7 +66,7 @@ class Example extends lng.Component {
 | src                     | string   | true     | undefined                            | Which image will be displayed                                                                                                                                                                                                                                           |
 | shouldScale             | boolean  | false    | false                                | When true, scale will be applied over the image and this will default to false                                                                                                                                                                                          |
 | srcCallback             | function | false    | undefined                            | optional callback that can be used to generate custom strings to request an image. The callback will be passed an object containing the following parameters: aspectRatio, src, w, h. Be default aspect ratio will match the closest value from srcCallbackAspectRatios |
-| srcCallbackAspectRatios | array    | false    | ['16x9', '3x4', '4x3', '2x1', '1x1'] | srcCallback will recieve an aspectRatio parameter when called, this array is used to find the closest value for your use case.                                                                                                                                          |
+| srcCallbackAspectRatios | array    | false    | ['16x9', '3x4', '4x3', '2x1', '1x1'] | srcCallback will receive an aspectRatio parameter when called, this array is used to find the closest value for your use case.                                                                                                                                          |
 
 ### Style Properties
 
