chore: update description and add tag to declaration file

--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -113,7 +113,7 @@ class Example extends lng.Component {
 
 | name            | type             | description                                                          |
 | --------------- | ---------------- | -------------------------------------------------------------------- |
-| backgroundColor | string           | background style properties such as shader and color                 |
+| backgroundColor | string           | color of the background                                              |
 | contentSpacing  | number           | padding to add between the icon and the text                         |
 | iconColor       | string           | color to be applied to the icon (only works with pure white PNGs)    |
 | offsetY         | number           | offset used to vertically center the text within the container       |
