--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -107,7 +107,7 @@ class Example extends lng.Component {
 | iconWidth  | number | false    | undefined | width of icon (required for SVG icons)                         |
 | iconHeight | number | false    | undefined | height of icon (required for SVG icons)                        |
 | iconAlign  | string | false    | undefined | side of the text where icon will appear on (`left` or `right`) |
-| title      | string | false    | undefined | text to render                                                 |
+| title      | string | false    | undefined | badge text                                                     |
 
 ### Style Properties
 
@@ -119,7 +119,7 @@ class Example extends lng.Component {
 | offsetY         | number           | offset used to vertically center the text within the container       |
 | paddingX        | number           | padding to add on the left and right between the text and background |
 | paddingY        | number           | padding to add on the top and bottom between the text and background |
-| radius          | number \| array  | shape of component                                                   |
+| radius          | number \| array  | radius of badge corner                                               |
 | strokeColor     | string           | color of the Badge border                                            |
 | strokeWidth     | number           | width of the Badge border                                            |
 | textStyle       | string \| object | text style to apply to the title                                     |
