--- a/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
@@ -54,17 +54,15 @@ class Basic extends lng.Component {
 
 ### Properties
 
-| name  | type   | required | default   | description             |
-| ----- | ------ | -------- | --------- | ----------------------- |
-| title | string | false    | undefined | headline of the content |
+| name  | type             | required | default   | description             |
+| ----- | ---------------- | -------- | --------- | ----------------------- |
+| title | string \| object | false    | undefined | headline of the content |
 
 ### Style Properties
 
 | name                     | type             | description                                                                  |
 | ------------------------ | ---------------- | ---------------------------------------------------------------------------- |
-| backgroundColorDisabled  | string           | color of the card when disabled                                              |
-| backgroundColorFocused   | string           | color of the card when not disabled and when focused                         |
-| backgroundColorUnfocused | string           | color of the card when unfocused and not disabled                            |
+| backgroundColor          | string           | color of the card                                                            |
 | paddingHorizontal        | number           | padding on the x-axis between the right and left of the card and its content |
 | paddingVertical          | number           | padding on the y-axis between the top and bottom of the card and its content |
 | radius                   | number \| array  | corner radius of card                                                        |
