feat: update checkbox ts file

--- a/packages/@lightningjs/ui-components/src/components/Checkbox/Checkbox.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Checkbox/Checkbox.mdx
@@ -61,6 +61,7 @@ class Example extends lng.Component {
 
 | name                   | type   | description                                 |
 | ---------------------- | ------ | ------------------------------------------- |
+| alpha                  | number | opacity (transparency) of the checkbox      |
 | backgroundColor        | string | color of Checkbox background when unchecked |
 | backgroundColorChecked | string | color of Checkbox background when checked   |
 | checkColor             | string | color of check icon                         |
