--- a/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
@@ -58,7 +58,7 @@ class Basic extends lng.Component {
 | icon    | string   | false    | null      | url for icon                                                                                                                                                                                                    |
 | onEnter | function | false    | undefined | if defined, will be invoked when enter is pressed while focused on the `Key` component. When defined, the `$onSoftKey` and `$toggleKeyboard` events will not be emitted from the key (see Events section below) |
 | size    | string   | false    | sm        | width of the Key                                                                                                                                                                                                |
-| toggle  | boolean  | false    | -         | used to toggle `$toggleKeyboard`                                                                                                                                                                                |
+| toggle  | boolean  | false    | undefined | used to toggle `$toggleKeyboard`                                                                                                                                                                                |
 
 ### Style Properties
 
