chore: update description

--- a/packages/@lightningjs/ui-components/src/components/ProgressBar/ProgressBar.mdx
+++ b/packages/@lightningjs/ui-components/src/components/ProgressBar/ProgressBar.mdx
@@ -58,9 +58,9 @@ The default progress bar width is 410.
 
 ### Properties
 
-| name     | type   | required | default | description                                    |
-| -------- | ------ | -------- | ------- | ---------------------------------------------- |
-| progress | number | false    | 0       | percentage of the current progress from 0 to 1 |
+| name     | type   | required | default | description                                                    |
+| -------- | ------ | -------- | ------- | -------------------------------------------------------------- |
+| progress | number | false    | 0       | Percentage of current progress in a decimal format from 0 to 1 |
 
 ### Style Properties
 
