fix(TestUtils): fix incorrect TS definitions

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.stories.mdx
@@ -67,7 +67,7 @@ const stage = {
 
 ```js
 import lng from '@lightningjs/core';
-import { create } from '@lightningjs/ui-components-test-utils';
+import { TestRenderer } from '@lightningjs/ui-components-test-utils';
 
 it('should render the component with text', () => {
   const testRenderer = TestRenderer.create({
