feat: update TS file

--- a/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
@@ -70,7 +70,7 @@ class Example extends lng.Component {
 | delay          | number  | false    | 1.5                      | Delay before scrolling starts                                                                             |
 | overrideLoopX  | number  | false    | undefined                | alters the length of the marquee loop. Used by withMarqueeSync to synchronize multiple marquee components |
 | repeat         | number  | false    | -1                       | Number of times to repeat scrolling                                                                       |
-| title          | string  | false    | undefined                | An object matching Lightning text object                                                                  |
+| title          | string  | false    | undefined                | Text content for the marquee title                                                                        |
 
 ### Style Properties
 
