fix: add signal

--- a/packages/@lightningjs/ui-components/src/components/Icon/Icon.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Icon/Icon.mdx
@@ -67,6 +67,7 @@ With an inline svg:
 
 | name  | type    | required | default   | description                                                                                                            |
 | ----- | ------- | -------- | --------- | ---------------------------------------------------------------------------------------------------------------------- |
+| color | string  | false    | undefined | icon color                                                                                                             |
 | fixed | boolean | false    | false     | when `true`, icon width and height will not dynamically resize to the final texture's `finalW` and `finalH` properties |
 | icon  | string  | true     | undefined | path to image or inline SVG XML                                                                                        |
 
