fix(Radio): adding alpha to docs and toggle to structure

--- a/packages/@lightningjs/ui-components/src/components/Radio/Radio.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Radio/Radio.mdx
@@ -61,6 +61,7 @@ class Example extends lng.Component {
 
 | name                   | type   | description                            |
 | ---------------------- | ------ | -------------------------------------- |
+| alpha                  | number | alpha value of the Radio          |
 | backgroundColor        | string | background color of the Radio          |
 | backgroundColorChecked | string | color of Radio background when checked |
 | knobColor              | string | color of the Radio knob                |
