chore: add accessor and update docs

--- a/packages/@lightningjs/ui-components/src/components/Provider/Provider.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Provider/Provider.mdx
@@ -81,7 +81,7 @@ class Basic extends lng.Component {
 
 | name                   | type             | description                                                     |
 | ---------------------- | ---------------- | --------------------------------------------------------------- |
-| alpha                  | number \| array  | transparency level of a provider                                |
+| alpha                  | number           | transparency level of a provider                                |
 | counterBackgroundColor | string           | background color of counter                                     |
 | counterTextStyle       | string \| object | text style for counter                                          |
 | itemSize               | number           | height and width to apply to icons and counter                  |
