feature(Storybook): updates categories to match the latests changes

--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/create.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation / Unit Testing / Test Renderer / create" />
+<Meta title="Docs / Unit Testing / Test Renderer / create" />
 
 # create
 
