--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/nextTick.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/nextTick.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation / Unit Testing / Test Utils / nextTick" />
+<Meta title="Docs / Unit Testing / Test Utils / nextTick" />
 
 # nextTick
 
