--- a/packages/@lightningjs/ui-components/src/docs/Introduction.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Introduction.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation/Introduction" />
+<Meta title="Docs/Introduction" />
 
 # Introduction
 
