--- a/packages/@lightningjs/ui-components/src/docs/LightningResources.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/LightningResources.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation/Lightning Resources" />
+<Meta title="Docs/Lightning Resources" />
 
 ## Additional Resources
 
