--- a/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
@@ -16,7 +16,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 import { Meta, Markdown } from '@storybook/blocks';
 import StorybookStructure from '../../../../../STORYBOOK.md?raw';
 
-<Meta title="Documentation/Storybook Structure" />
+<Meta title="Docs/Storybook Structure" />
 
 <Markdown>{StorybookStructure}</Markdown>
 
