--- a/packages/@lightningjs/ui-components/src/docs/Theming.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Theming.mdx
@@ -17,7 +17,7 @@ import { Meta } from '@storybook/blocks';
 import CustomThemeProgressBar from '../assets/images/CustomThemeProgressBar.png';
 import CustomUpdatedProgressBar from '../assets/images/CustomProgressBar.png';
 
-<Meta title="Documentation / Theming / Overview" />
+<Meta title="Docs / Theming / Overview" />
 
 # Theming
 
