--- a/packages/@lightningjs/ui-components/src/docs/ThemingAttributes.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingAttributes.mdx
@@ -18,7 +18,7 @@ import radiusTable from '../../../../apps/lightning-ui-docs/scripts/themePropert
 import colorTable from '../../../../apps/lightning-ui-docs/scripts/themePropertyTables/color.md?raw';
 import typographyTable from '../../../../apps/lightning-ui-docs/scripts/themePropertyTables/typography.md?raw';
 
-<Meta title="Documentation / Theming/ Theme Properties" />
+<Meta title="Docs / Theming/ Theme Properties" />
 
 # Theming Properties in Our Components
 
