--- a/packages/@lightningjs/ui-components/src/docs/ThemingExtensions.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingExtensions.mdx
@@ -23,7 +23,7 @@ import ExtensionProgressBar from '../assets/images/ExtensionProgressBar.png';
   }
 `}</style>
 
-<Meta title="Documentation / Theming/ Extensions" />
+<Meta title="Docs / Theming/ Extensions" />
 
 # Extensions
 
