--- a/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.mdx
@@ -16,7 +16,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 import { Meta } from '@storybook/blocks';
 import Flowchart from '../assets/images/Flowchart.png';
 
-<Meta title="Documentation / Theming/ Hierarchy" />
+<Meta title="Docs / Theming/ Hierarchy" />
 
 # Theming Hierarchy
 
