--- a/packages/@lightningjs/ui-components/src/docs/ThemingSubTheming.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingSubTheming.mdx
@@ -25,7 +25,7 @@ import MultiSubThemeProgressBars from '../assets/images/MultiSubThemeProgressBar
   }
 `}</style>
 
-<Meta title="Documentation / Theming/ Subtheming" />
+<Meta title="Docs / Theming/ Subtheming" />
 
 # Subtheming
 
