--- a/packages/apps/lightning-ui-docs/src/Contributing.mdx
+++ b/packages/apps/lightning-ui-docs/src/Contributing.mdx
@@ -16,6 +16,6 @@ SPDX-License-Identifier: Apache-2.0\*/}
 import { Meta, Markdown } from '@storybook/blocks';
 import Contributing from '../../../../CONTRIBUTING.md?raw';
 
-<Meta title="Documentation / Contributing" />
+<Meta title="Docs / Contributing" />
 
 <Markdown>{Contributing}</Markdown>
