--- a/packages/apps/lightning-ui-docs/src/Readme.mdx
+++ b/packages/apps/lightning-ui-docs/src/Readme.mdx
@@ -16,6 +16,6 @@ SPDX-License-Identifier: Apache-2.0\*/}
 import { Markdown, Meta } from '@storybook/blocks';
 import ReadMe from '../../../../README.md?raw';
 
-<Meta title="Documentation/ Read Me" />
+<Meta title="Docs/ Read Me" />
 
 <Markdown>{ReadMe}</Markdown>
