--- a/packages/@lightningjs/ui-components-test-utils/src/docs/Overview.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/Overview.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation / Unit Testing / Overview" />
+<Meta title="Docs / Unit Testing / Overview" />
 
 # @lightningjs/ui-components-test-utils
 
