--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation / Unit Testing / Test Renderer / toJSON" />
+<Meta title="Docs / Unit Testing / Test Renderer / toJSON" />
 
 # toJSON
 
