--- a/packages/@lightningjs/ui-components/src/docs/Base.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Base.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation/Base Component" />
+<Meta title="Docs/Base Component" />
 
 # Base Component
 
