--- a/packages/@lightningjs/ui-components/src/docs/ThemingComponentConfig.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingComponentConfig.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation / Theming / Component Config" />
+<Meta title="Docs / Theming / Component Config" />
 
 # Component Config
 
