--- a/packages/@lightningjs/ui-components/src/docs/ThemingMode.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingMode.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation / Theming / Modes" />
+<Meta title="Docs / Theming / Modes" />
 
 # Mode
 
