--- a/packages/@lightningjs/ui-components/src/docs/ThemingStorybook.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingStorybook.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Documentation / Theming/ Use in Storybook" />
+<Meta title="Docs / Theming/ Use in Storybook" />
 
 # Theming and Storybook
 
