--- a/packages/@lightningjs/ui-components/src/mixins/withClassCache/withClassCache.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withClassCache/withClassCache.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Utilties/withClassCache" />;
+<Meta title="Utilities/withClassCache" />
 
 # withClassCache
 
