feature(Storybook): adds notes and fixes minor mdx syntax errors

--- a/packages/@lightningjs/ui-components/src/mixins/withHandleKey/withHandleKey.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withHandleKey/withHandleKey.mdx
@@ -29,7 +29,7 @@ https://github.com/rdkcentral/Lightning-UI-Components/blob/develop/packages/@lig
 
 ## Usage
 
-Out of the box, `withHandleKey` adds a generic \_handleKey & \_handleKeyRelease function and calls the corresponding `on{Key}` handler. If no key handler is found, it fires an `$on{Key}` & $on${Key}Release event.
+Out of the box, `withHandleKey` adds a generic \_handleKey & \_handleKeyRelease function and calls the corresponding `on{Key}` handler. If no key handler is found, it fires an `$on{Key}` & `$on${Key}Release` event.
 
 Additionally, if a `metricsPayload` is defined, the global `keyMetricsCallbackHandler` in Context will be invoked with
 the given `metricsPayload`.
@@ -62,7 +62,7 @@ class Example extends lng.Component {
 
 Take a look at the preview above. Tile component is using the withHandleKey mixin.
 If you press enter on the first tile, you should see it print a metrics payload in the console (inspector view)
-In this example, Tile extends `withHandleKey` and allows dynamically adding on${Key} functions or event listener for $on{key}.
+In this example, Tile extends `withHandleKey` and allows dynamically adding `on${Key}` functions or event listener for `$on{key}`.
 
 Example below - an metricPayload is provided, which will be invoked when any key is handled, with the payload
 `metricsPayload: { buttonName: 'arrowUp', uniqueId: 'unique-123' }`
