--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -13,11 +13,12 @@ See the License for the specific language governing permissions and
 limitations under the License.
 SPDX-License-Identifier: Apache-2.0\*/}
 
-import { Meta } from '@storybook/blocks';
+import { Meta, Title } from '@storybook/blocks';
 import Badge from '.';
 import * as BadgeStories from './Badge.stories.js';
 
 <Meta of={BadgeStories} />
+
 <Title />
 
 This component is used to display small keywords of metadata, like video or audio quality (ie HD or CC).
