fix(InlineContent): update iconW and iconH to iconWidth and iconHeight

--- a/packages/@lightningjs/ui-components/src/components/InlineContent/InlineContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/InlineContent/InlineContent.mdx
@@ -82,8 +82,8 @@ class Example extends lng.Component {
 | name           | type                                                                                          | description                                                                                                                                                                                                                                             |
 | -------------- | --------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | contentSpacing | number                                                                                        | padding between all content items                                                                                                                                                                                                                       |
-| iconH          | number                                                                                        | height of each icon                                                                                                                                                                                                                                     |
-| iconW          | number                                                                                        | width of each icon                                                                                                                                                                                                                                      |
+| iconHeight     | number                                                                                        | height of each icon                                                                                                                                                                                                                                     |
+| iconWidth      | number                                                                                        | width of each icon                                                                                                                                                                                                                                      |
 | justify        | 'flex-start' \| 'flex-end' \| 'center' \| 'space-between' \| 'space-around' \| 'space-evenly' | alignment of first line flexbox content                                                                                                                                                                                                                 |
 | marginBottom   | number                                                                                        | space beneath rendered content                                                                                                                                                                                                                          |
 | maxLines       | number                                                                                        | Maximum number of lines to display before truncation                                                                                                                                                                                                    |
