fix(Artwork): update foregroundW/H to foregroundWidth/Height

--- a/packages/@lightningjs/ui-components/src/components/Artwork/Artwork.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Artwork/Artwork.mdx
@@ -58,9 +58,9 @@ class Example extends lng.Component {
 | blur                    | boolean  | false    | false                                | When true, a blur will be applied to the image this will default to true if circleImage is true                                                                                                                                                                         |
 | fill                    | boolean  | false    | false                                | When true, a fill will be applied over the image this will default to false                                                                                                                                                                                             |
 | fallbackSrc             | string   | false    | undefined                            | Sets the fallback image that will be shown in if the src request fails                                                                                                                                                                                                  |
-| foregroundH             | number   | false    | undefined                            | Height value for the foregroundSrc if defined                                                                                                                                                                                                                           |
+| foregroundHeight        | number   | false    | undefined                            | Height value for the foregroundSrc if defined                                                                                                                                                                                                                           |
 | foregroundSrc           | string   | false    | undefined                            | Image location for item that should be placed on top of the artwork above all other layers                                                                                                                                                                              |
-| foregroundW             | number   | false    | undefined                            | Width value for the foregroundSrc if defined                                                                                                                                                                                                                            |
+| foregroundWidth         | number   | false    | undefined                            | Width value for the foregroundSrc if defined                                                                                                                                                                                                                            |
 | gradient                | boolean  | false    | false                                | When true, a gradient will be added over all other elements                                                                                                                                                                                                             |
 | format                  | string   | false    | 'default'                            | Selction of image display modes. 'default', 'circle', 'square', 'contain'                                                                                                                                                                                               |
 | src                     | string   | true     | undefined                            | Which image will be displayed                                                                                                                                                                                                                                           |
