fix(Input): fixes typo in docs

--- a/packages/@lightningjs/ui-components/src/components/Input/Input.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Input/Input.mdx
@@ -157,7 +157,7 @@ this.tag('Input').password = false;
 | helpText    | string  | false    | undefined | HelpText of input container                                                                                                                                    |
 | listening   | boolean | false    | undefined | when true, input will accept changes from clear, insert, and backspace methods. When false, effects of those methods will be ignored and not affect the input. |
 | mask        | string  | false    | undefined | character to use as a mask when password is true                                                                                                               |
-| password    | boolean | false    | undefined | determines whether input should b be masked                                                                                                                    |
+| password    | boolean | false    | undefined | determines whether input should be masked                                                                                                                      |
 | position    | number  | false    | undefined | index of current cursor position                                                                                                                               |
 
 ### Style Properties
