feat(Storybook): updates import of NavigationManagerStories

--- a/packages/@lightningjs/ui-components/src/components/NavigationManager/NavigationManager.mdx
+++ b/packages/@lightningjs/ui-components/src/components/NavigationManager/NavigationManager.mdx
@@ -15,7 +15,7 @@ SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta, Title } from '@storybook/blocks';
 import { DocsLink } from '../../docs/utils';
-import * as NavigationManagerStories from './NavigationManager.stories';
+import * as NavigationManagerStories from './NavigationManager.stories.js';
 
 <Meta of={NavigationManagerStories} />
 
